feat: dashboard admin

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ OKX_API_KEY=
 OKX_SECRET_KEY=
 OKX_PASSWORD=
 DISCORD_WEBHOOK_URL=
+
+# SaaS API
+JWT_SECRET_KEY=your-secure-jwt-secret-key-change-me
+AUTO_START_BOT=True
