--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,19 @@ requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=5.0.0",
     "ccxt>=4.5.37",
+    "fastapi>=0.129.0",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
     "pandas-ta>=0.4.71b0",
     "plotly>=6.5.2",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
+    "python-jose>=3.5.0",
+    "python-multipart>=0.0.22",
     "python-telegram-bot>=22.6",
     "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "sqlalchemy>=2.0.46",
     "streamlit>=1.54.0",
+    "uvicorn[standard]>=0.40.0",
 ]
